--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>MSCGen</title>
+    <style>
+      html, body {
+        overscroll-behavior: none;
+        height: 100%;
+      }
+      #root {
+        height: inherit;
+      }
+    </style>
 </head>
 
-<body style="overscroll-behavior:none">
+<body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
