--- a/public/index.html
+++ b/public/index.html
@@ -24,17 +24,20 @@
     -->
     <title>MSCGen</title>
     <style>
-      html, body {
-        overscroll-behavior: none;
-        height: 100%;
-      }
-      #root {
-        height: inherit;
-      }
+        html,
+        body {
+            overscroll-behavior: none;
+            height: 100%;
+        }
+        
+        #root {
+            height: inherit;
+            overflow: hidden;
+        }
     </style>
 </head>
 
-<body >
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
